[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "STACpopulator"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "colorlog",
    "pyyaml",
    "siphon",
    "pystac",
    "xncml",
    "pydantic",
    "pyessv"
]

[tool.setuptools]
py-modules = ["STACpopulator"]


